--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,5 @@
 .App {
   text-align: center;
-  margin-left: 10%;
-  margin-right: 10%;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-}
-
-.App-link {
-  color: #61dafb;
+  width: 60%;
+  margin: auto;
 }
